Details
-
Bug
-
Status: Closed
-
Trivial
-
Resolution: Fixed
-
0.7, 0.8
-
Windows
-
Patch Available
Description
When compiling on platforms without /usr/include/endian.h (e.g. Windows.h), TProtocol.h uses boost to detect the endianess, but does it wrong: boost's endian.hpp will only #define BOOST_LITTLE_ENDIAN with no value (unlike endian.h)
Attached is a patch against trunk which fixes the code that uses boost. Tested on Windows, boost 1.44.0.