THRIFT-1341 TProtocol.h endian detection wrong with boost Patch: alexandre parenteau

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1169963 13f79535-47bb-0310-9956-ffa450edef68